fast/05-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-app
  name: redis-app
  namespace: fast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-app
  template:
    metadata:
      labels:
        app: redis-app
    spec:
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: redis-config
            items:
            - key: redis-config
              path: redis.conf
      containers:
      - name: redis
        image: redis:5.0.4
        imagePullPolicy: "IfNotPresent"
        command:
        - redis-server
        - "/redis-master/redis.conf"
        ports:
        - containerPort: 6379          
        resources:
          limits:
            cpu: "0.1"
        volumeMounts:
        - mountPath: /redis-master-data
          name: data
        - mountPath: /redis-master
          name: config
