fast/05-scatch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scratch
  namespace: fast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scratch
  template:
    metadata:
      labels:
        app: scratch
    spec:
      containers:
      - name: scratch
        image: docker-registry.home/scratch:test
        command: ["webpack" ]
        args: ["serve", "--host", "0.0.0.0"]
        ports:
        - containerPort: 8080
          protocol: TCP 
        imagePullPolicy: Always
