fast/06-fast-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fast
  name: fast
  namespace: fast
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: fast
