fast/06-queue-service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: fast
  name: queue
  labels:
    app: queue
#    type: LoadBalancer
spec:
#  type: NodePort
  ports:
   - name: http
     protocol: TCP
     port: 15672
#     targetPort: 15672
#     nodePort: 31672
   - name: amqp
     protocol: TCP
     port: 5672
#     targetPort: 5672
#     nodePort: 30672
  selector:
    app: queue-app
