fast/06-scratch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scratch-service
  namespace: fast
spec:
  ports:
  - name: http-scratch
    port: 8080
  selector:
    app: scratch
