fast/09-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fast
  namespace: fast
spec:
  rules:
  - host: fast.local
    http:
      paths:
      - path: /
        backend:
          serviceName: fast
          servicePort: http
  tls:
  - hosts:
    - fast.local
    secretName: tls-secret
